hphp/hack/test/typecheck/typeconsts/linearization.php.exp
File "linearization.php", line 11, characters 28-29:
Some members in class `child` are incompatible with those declared in type `I1` (Typing[4374])
  File "linearization.php", line 8, characters 14-14:
  Concrete and abstract type constants with default values in an interface cannot conflict with inherited concrete or abstract type constants with default values.
  File "linearization.php", line 4, characters 23-23:
  `T` inherited from `I1`
  File "linearization.php", line 8, characters 14-14:
  conflicts with `concrete type constant` `T` inherited from `I2`.
